crates/sniff-test/tests/snapshots/cli__unsafe_op_overrides_use_umbrella_fallback.snap
---
source: crates/sniff-test/tests/cli.rs
expression: snapshot
---
exit: 101
stdout:
<empty>
stderr:
    Checking unsafe-ops v0.1.0 ([FIXTURE])
error: function `asm_unjustified` may have safety effect
  --> src/lib.rs:32:1
   |
32 | pub fn asm_unjustified() {
   | ^^^^^^^^^^^^^^^^^^^^^^^^ this is a public item
33 |     unsafe {
34 |         asm!("nop");
   |         ----------- this may have safety effect
   |
note: `asm_unjustified` reaches safety effect operation here
  --> src/lib.rs:34:9
   |
34 |         asm!("nop");
   |         ^^^^^^^^^^^
   = help: if this operation cannot have safety effect, explain why with a `// SAFETY:` comment
   = help: if `asm_unjustified` can have safety effect, add a `# Safety` section

warning: function `deref_unjustified` may have safety effect
  --> src/lib.rs:16:1
   |
16 | pub fn deref_unjustified(ptr: *const u32) -> u32 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this is a public item
17 |     unsafe { *ptr }
   |              ---- this may have safety effect
   |
note: `deref_unjustified` reaches safety effect operation here
  --> src/lib.rs:17:14
   |
17 |     unsafe { *ptr }
   |              ^^^^
   = help: if this operation cannot have safety effect, explain why with a `// SAFETY:` comment
   = help: if `deref_unjustified` can have safety effect, add a `# Safety` section

note: set `show-full-stack-trace = true` under `[analysis]` in sniff-test.toml to show every reachability step
warning: `unsafe-ops` (lib) generated 1 warning
error: could not compile `unsafe-ops` (lib) due to 1 previous error; 1 warning emitted
